fixed gallery overflow

--- a/src/styles/3-components/home/_home.sass
+++ b/src/styles/3-components/home/_home.sass
@@ -86,6 +86,9 @@ body
         display: flex;
       .nav-mobile
         display: none;
+    .mobile-dropdown-nav
+      display: none;
+
 
   
 
